# protobuf-2-vs-3-benchmark

./: CMakeLists.txt  README.md  benchmark.cpp  benchmark_v2.cpp  benchmark_v3.cpp  common.cpp  common.hpp  data.hpp  v2.cpp  v3.cpp
images/: graphs.R
message/v2/: message.proto
message/v3/: message.proto
